added file for ability to export apk

--- a/app.json
+++ b/app.json
@@ -25,10 +25,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.mosieqadventures.WorkTime"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "14b2f349-9623-4b55-81ed-2dc5723f8a97"
+      }
     }
   }
 }
